@@ -30,6 +30,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #1065986: pydoc can now handle unicode strings.
+
 - Issue #16039: CVE-2013-1752: Change use of readline in imaplib module to
   limit line length.  Patch by Emil Lind.
 
